[feat] fix matching alignment

--- a/app/assets/stylesheets/matching.scss
+++ b/app/assets/stylesheets/matching.scss
@@ -96,6 +96,9 @@ body {
   }
 }
 
+.card {
+  min-height: 120px;
+}
 
   /* ~~~~~~~ INIT. BTN ~~~~~~~ */
 
